# kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
src/: AST.cpp  AST.hpp  ASTPrinter.hpp  CodegenVisitor.cpp  CodegenVisitor.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  PrintIR.cpp  TraversingVisitor.hpp
test/: test_ast.cpp  test_codegen.cpp  test_lexer.cpp  test_parser.cpp  test_traverse.cpp
